# py-observer

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
py_observer/: __init__.py  core.py
tests/: test_py_observer.py
